package main

import (
	"GOApp/internal/database"
	pb "GOApp/proto/user/v1"
	"context"
	"database/sql"
	"log"
	"net"
	"strings"
	"time"

	_ "github.com/lib/pq"
	"google.golang.org/grpc/metadata"

	"github.com/google/uuid"
	"google.golang.org/grpc"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
)

type Server struct {
	pb.UnimplementedUserServiceServer
	database *database.Database
}

func (s *Server) CreateUser(ctx context.Context, req *pb.CreateUserRequest) (*pb.UserResponse, error) {
	if req.Name == "" || req.Username == "" {
		return nil, status.Error(codes.InvalidArgument, "name or username is empty")
	}

	user := &database.UserDB{
		ID:        uuid.New().String(),
		Name:      req.Name,
		Username:  req.Username,
		Age:       req.Age,
		CreatedAt: time.Now().Format(time.DateTime),
	}

	if err := s.database.SaveUser(user); err != nil {
		log.Printf("Database error: %v", err)
		if strings.Contains(err.Error(), "duplicate key") ||
			strings.Contains(err.Error(), "unique constraint") {
			return nil, status.Error(codes.AlreadyExists, "user already exists")
		}
		return nil, status.Error(codes.Internal, "failed to save user")
	}

	return &pb.UserResponse{
		UserId:    user.ID,
		Name:      user.Name,
		Username:  user.Username,
		Age:       user.Age,
		CreatedAt: user.CreatedAt,
	}, nil
}

func (s *Server) GetUserByUsername(ctx context.Context, req *pb.GetUserRequest) (*pb.UserResponse, error) {
	if req.Username == "" {
		return nil, status.Error(codes.InvalidArgument, "user_id is empty")
	}

	user, err := s.database.GetUserByUsername(req.Username)

	// –ü–æ–ª—É—á–∞–µ–º –¥–æ–ø–æ–ª–Ω–∏—Ç–µ–ª—å–Ω—É—é —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫—É (–º–æ–∂–Ω–æ –¥–æ–±–∞–≤–∏—Ç—å –º–µ—Ç–æ–¥—ã –≤ database)
	postsCount, _ := s.database.GetUserPostsCount(user.ID)
	followersCount, _ := s.database.GetFollowersCount(user.ID)
	followingCount, _ := s.database.GetFollowingCount(user.ID)
	if err != nil {
		return nil, status.Error(codes.NotFound, "user not found")
	}
	return &pb.UserResponse{
		UserId:         user.ID,
		Name:           user.Name,
		Username:       user.Username,
		Age:            user.Age,
		CreatedAt:      user.CreatedAt,
		TgId:           user.TgID,
		Bio:            user.Bio,
		AvatarUrl:      user.AvatarURL,
		PostsCount:     postsCount,
		FollowersCount: followersCount,
		FollowingCount: followingCount,
	}, nil
}

func (s *Server) GetUserByTgID(ctx context.Context, req *pb.GetUserByTgIDRequest) (*pb.UserResponse, error) {
	if req.TgId == "" {
		return nil, status.Error(codes.InvalidArgument, "tg_id is empty")
	}
	user, err := s.database.GetUserByTgID(req.TgId)

	// –ü–æ–ª—É—á–∞–µ–º –¥–æ–ø–æ–ª–Ω–∏—Ç–µ–ª—å–Ω—É—é —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫—É (–º–æ–∂–Ω–æ –¥–æ–±–∞–≤–∏—Ç—å –º–µ—Ç–æ–¥—ã –≤ database)
	postsCount, _ := s.database.GetUserPostsCount(user.ID)
	followersCount, _ := s.database.GetFollowersCount(user.ID)
	followingCount, _ := s.database.GetFollowingCount(user.ID)
	if err != nil {
		return nil, status.Error(codes.NotFound, "user not found")
	}
	return &pb.UserResponse{
		UserId:         user.ID,
		Name:           user.Name,
		Username:       user.Username,
		Age:            user.Age,
		CreatedAt:      user.CreatedAt,
		TgId:           user.TgID,
		Bio:            user.Bio,
		AvatarUrl:      user.AvatarURL,
		PostsCount:     postsCount,
		FollowersCount: followersCount,
		FollowingCount: followingCount,
	}, nil
}

func (s *Server) RegisterUser(ctx context.Context, req *pb.RegisterUserRequest) (*pb.UserResponse, error) {
	if req.Name == "" || req.Username == "" {
		return nil, status.Error(codes.InvalidArgument, "name or username is empty")
	}

	if req.TgId == "" || req.Username == "" || req.Name == "" {
		return nil, status.Error(codes.InvalidArgument, "tg_id, username and name are required")
	}

	// –ü—Ä–æ–≤–µ—Ä—è–µ–º, –Ω–µ –∑–∞–Ω—è—Ç –ª–∏ username
	existingUser, err := s.database.GetUserByUsername(req.Username)
	if err == nil && existingUser != nil {
		return nil, status.Error(codes.AlreadyExists, "username already taken")
	}

	// –ü—Ä–æ–≤–µ—Ä—è–µ–º, –Ω–µ –∑–∞—Ä–µ–≥–∏—Å—Ç—Ä–∏—Ä–æ–≤–∞–Ω –ª–∏ —É–∂–µ —ç—Ç–æ—Ç Telegram ID
	existingByTg, err := s.database.GetUserByTgID(req.TgId)
	if err == nil && existingByTg != nil {
		return nil, status.Error(codes.AlreadyExists, "user already registered with this Telegram ID")
	}
	//if err := s.database.SaveUser(user); err != nil {
	//	log.Printf("Database error: %v", err)
	//	if strings.Contains(err.Error(), "duplicate key") ||
	//		strings.Contains(err.Error(), "unique constraint") {
	//		return nil, status.Error(codes.AlreadyExists, "user already exists")
	//	}
	//	return nil, status.Error(codes.Internal, "failed to save user")
	//}

	user := &database.UserDB{
		ID:        uuid.New().String(),
		TgID:      req.TgId,
		Name:      req.Name,
		Username:  req.Username,
		Age:       req.Age,
		Bio:       req.Bio,
		AvatarURL: req.AvatarUrl,
		UpdatedAt: time.Now().Format(time.DateTime),
		CreatedAt: time.Now().Format(time.DateTime),
	}

	if err := s.database.SaveUser(user); err != nil {
		log.Printf("Database error: %v", err)
		if strings.Contains(err.Error(), "duplicate key") ||
			strings.Contains(err.Error(), "unique constraint") {
			return nil, status.Error(codes.AlreadyExists, "user already exists")
		}
		return nil, status.Error(codes.Internal, "failed to save user")
	}

	return &pb.UserResponse{
		UserId:    user.ID,
		Name:      user.Name,
		Username:  user.Username,
		Age:       user.Age,
		CreatedAt: user.CreatedAt,
		Bio:       user.Bio,
		AvatarUrl: user.AvatarURL,
	}, nil
}

func (s *Server) CreatePost(ctx context.Context, req *pb.CreatePostRequest) (*pb.PostResponse, error) {
	if req.TgId == "" || req.Content == "" {
		return nil, status.Error(codes.InvalidArgument, "tg_id and content are required")
	}
	// –ü–æ–ª—É—á–∞–µ–º –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é –æ–± –∞–≤—Ç–æ—Ä–µ
	user, err := s.database.GetUserByTgID(req.TgId)
	if err != nil {
		return nil, status.Error(codes.Internal, "failed to get author info")
	}

	post := &database.PostDB{
		ID:        uuid.New().String(),
		AuthorID:  user.ID, // ‚Üê –≤–æ—Ç –∑–¥–µ—Å—å –∏—Å–ø–æ–ª—å–∑—É–µ—Ç—Å—è –≤–Ω—É—Ç—Ä–µ–Ω–Ω–∏–π ID –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è
		Content:   req.Content,
		MediaURL:  req.MediaUrl,
		CreatedAt: time.Now().Format(time.RFC3339),
		UpdatedAt: time.Now().Format(time.RFC3339),
	}

	if err := s.database.CreatePost(post); err != nil {
		return nil, status.Error(codes.Internal, "failed to create post")
	}

	return &pb.PostResponse{
		PostId:         post.ID,
		AuthorTgId:     user.TgID,
		AuthorName:     user.Name,
		AuthorUsername: user.Username,
		Content:        post.Content,
		MediaUrl:       post.MediaURL,
		CreatedAt:      post.CreatedAt,
		UpdatedAt:      post.UpdatedAt,
	}, nil
}

func (s *Server) GetUserPosts(ctx context.Context, req *pb.GetUserPostsRequest) (*pb.PostsResponse, error) {
	if req.TgId == "" {
		return nil, status.Error(codes.InvalidArgument, "tg_id is required")
	}

	user, err := s.database.GetUserByTgID(req.TgId)
	if err != nil {
		return nil, status.Error(codes.NotFound, "user not found")
	}

	page := req.GetPage()
	if page < 1 {
		page = 1
	}
	pageSize := req.GetPageSize()
	if pageSize < 1 || pageSize > 50 {
		pageSize = 10
	}

	offset := (page - 1) * pageSize

	posts, err := s.database.GetUserPosts(user.ID, int(pageSize), int(offset))
	if err != nil {
		return nil, status.Error(codes.Internal, "failed to get posts")
	}

	var pbPosts []*pb.PostResponse
	for _, post := range posts {
		comments, err := s.database.GetPostComments(post.ID)
		commentsCount := int32(0)
		if err == nil {
			commentsCount = int32(len(comments))
		} else {
			log.Printf("‚ö†Ô∏è Failed to get comments for post %s: %v", post.ID, err)
		}
		pbPosts = append(pbPosts, &pb.PostResponse{
			PostId:         post.ID,
			AuthorTgId:     user.TgID, // tg_id –æ–¥–∏–Ω –¥–ª—è –≤—Å–µ—Ö –ø–æ—Å—Ç–æ–≤
			AuthorName:     user.Name,
			AuthorUsername: user.Username,
			Content:        post.Content,
			MediaUrl:       post.MediaURL,
			CreatedAt:      post.CreatedAt,
			UpdatedAt:      post.UpdatedAt,
			CommentsCount:  commentsCount,
		})
	}
	totalCount, err := s.database.GetUserPostsCount(user.ID)
	if err != nil {
		log.Printf("‚ö†Ô∏è Failed to get total posts count: %v", err)
	}

	return &pb.PostsResponse{
		Posts:      pbPosts,
		TotalCount: totalCount,
	}, nil
}

func (s *Server) IsSubscribed(ctx context.Context, req *pb.IsSubscribedRequest) (*pb.IsSubscribedResponse, error) {
	if req.FollowerId == "" || req.FollowingId == "" {
		return nil, status.Error(codes.InvalidArgument, "follower_id and following_id are required")
	}

	isSubscribed, err := s.database.IsSubscribed(req.FollowerId, req.FollowingId)
	if err != nil {
		log.Printf("‚ùå Failed to check subscription: %v", err)
		return nil, status.Error(codes.Internal, "failed to check subscription")
	}

	return &pb.IsSubscribedResponse{
		IsSubscribed: isSubscribed,
	}, nil
}

func (s *Server) GetPost(ctx context.Context, req *pb.GetPostRequest) (*pb.PostWithCommentsResponse, error) {
	log.Printf("üìñ GetPost called: postID=%s", req.PostId)

	if req.PostId == "" {
		return nil, status.Error(codes.InvalidArgument, "post_id is required")
	}

	// –ü–æ–ª—É—á–∞–µ–º –ø–æ—Å—Ç –∏–∑ –±–∞–∑—ã –¥–∞–Ω–Ω—ã—Ö
	post, err := s.database.GetPostByID(req.PostId)
	if err != nil {
		if err == sql.ErrNoRows {
			log.Printf("‚ùå Post not found: %s", req.PostId)
			return nil, status.Error(codes.NotFound, "post not found")
		}
		log.Printf("‚ùå Database error: %v", err)
		return nil, status.Error(codes.Internal, "failed to get post")
	}

	// –ü–æ–ª—É—á–∞–µ–º –∞–≤—Ç–æ—Ä–∞ –ø–æ—Å—Ç–∞
	author, err := s.database.GetUserByID(post.AuthorID)
	if err != nil {
		log.Printf("‚ùå Failed to get author: %v", err)
		return nil, status.Error(codes.Internal, "failed to get author info")
	}

	// –ü–æ–ª—É—á–∞–µ–º –∫–æ–º–º–µ–Ω—Ç–∞—Ä–∏–∏ –∫ –ø–æ—Å—Ç—É
	comments, err := s.database.GetPostComments(req.PostId)
	if err != nil {
		log.Printf("‚ùå Failed to get comments: %v", err)
		return nil, status.Error(codes.Internal, "failed to get comments")
	}

	// –§–æ—Ä–º–∏—Ä—É–µ–º –æ—Ç–≤–µ—Ç —Å –ø–æ—Å—Ç–æ–º
	postResponse := &pb.PostResponse{
		PostId:         post.ID,
		AuthorTgId:     author.TgID,
		AuthorName:     author.Name,
		AuthorUsername: author.Username,
		Content:        post.Content,
		MediaUrl:       post.MediaURL,
		CreatedAt:      post.CreatedAt,
		UpdatedAt:      post.UpdatedAt,
		CommentsCount:  int32(len(comments)),
	}

	// –§–æ—Ä–º–∏—Ä—É–µ–º –æ—Ç–≤–µ—Ç —Å –∫–æ–º–º–µ–Ω—Ç–∞—Ä–∏—è–º–∏
	var commentsResponse []*pb.CommentResponse
	for _, comment := range comments {
		// –ü–æ–ª—É—á–∞–µ–º –∞–≤—Ç–æ—Ä–∞ –∫–æ–º–º–µ–Ω—Ç–∞—Ä–∏—è
		commentAuthor, err := s.database.GetUserByID(comment.UserID)
		if err != nil {
			log.Printf("‚ö†Ô∏è Failed to get comment author: %v", err)
			continue
		}

		commentsResponse = append(commentsResponse, &pb.CommentResponse{
			CommentId:      comment.ID,
			PostId:         comment.PostID,
			AuthorTgId:     commentAuthor.TgID,
			AuthorName:     commentAuthor.Name,
			AuthorUsername: commentAuthor.Username,
			Content:        comment.Content,
			CreatedAt:      comment.CreatedAt,
		})
	}

	log.Printf("‚úÖ Post %s retrieved with %d comments", req.PostId, len(commentsResponse))

	return &pb.PostWithCommentsResponse{
		Post:     postResponse,
		Comments: commentsResponse,
	}, nil
}

func (s *Server) DeletePost(ctx context.Context, req *pb.DeletePostRequest) (*pb.DeleteResponse, error) {
	log.Printf("üóëÔ∏è DeletePost called: postID=%s, userID=%s", req.PostId, req.UserId)

	if req.PostId == "" {
		return &pb.DeleteResponse{
			Success: false,
			Message: "post_id is required",
		}, status.Error(codes.InvalidArgument, "post_id is required")
	}

	if req.UserId == "" {
		return &pb.DeleteResponse{
			Success: false,
			Message: "user_id is required",
		}, status.Error(codes.InvalidArgument, "user_id is required")
	}

	// –ü–æ–ª—É—á–∞–µ–º –ø–æ—Å—Ç –∏–∑ –±–∞–∑—ã –¥–∞–Ω–Ω—ã—Ö
	post, err := s.database.GetPostByID(req.PostId)
	if err != nil {
		if err == sql.ErrNoRows {
			log.Printf("‚ùå Post not found: %s", req.PostId)
			return &pb.DeleteResponse{
				Success: false,
				Message: "post not found",
			}, status.Error(codes.NotFound, "post not found")
		}
		log.Printf("‚ùå Database error: %v", err)
		return &pb.DeleteResponse{
			Success: false,
			Message: "database error",
		}, status.Error(codes.Internal, "database error")
	}

	// –ü–æ–ª—É—á–∞–µ–º –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é –æ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª–µ, –∫–æ—Ç–æ—Ä—ã–π –ø—ã—Ç–∞–µ—Ç—Å—è —É–¥–∞–ª–∏—Ç—å –ø–æ—Å—Ç
	user, err := s.database.GetUserByID(req.UserId)
	if err != nil {
		log.Printf("‚ùå User not found: %s", req.UserId)
		return &pb.DeleteResponse{
			Success: false,
			Message: "user not found",
		}, status.Error(codes.NotFound, "user not found")
	}

	// –ü—Ä–æ–≤–µ—Ä—è–µ–º –ø—Ä–∞–≤–∞ –Ω–∞ —É–¥–∞–ª–µ–Ω–∏–µ
	// 1. –Ø–≤–ª—è–µ—Ç—Å—è –ª–∏ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—å –∞–≤—Ç–æ—Ä–æ–º –ø–æ—Å—Ç–∞
	isAuthor := (post.AuthorID == req.UserId)

	// 2. –Ø–≤–ª—è–µ—Ç—Å—è –ª–∏ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—å –∞–¥–º–∏–Ω–∏—Å—Ç—Ä–∞—Ç–æ—Ä–æ–º
	isAdmin, _ := s.database.IsAdmin(user.TgID)

	if !isAuthor && !isAdmin {
		log.Printf("‚õî Permission denied: user %s is not author or admin", req.UserId)
		return &pb.DeleteResponse{
			Success: false,
			Message: "you don't have permission to delete this post",
		}, status.Error(codes.PermissionDenied, "you don't have permission to delete this post")
	}

	// –£–¥–∞–ª—è–µ–º –ø–æ—Å—Ç
	err = s.database.DeletePost(req.PostId)
	if err != nil {
		log.Printf("‚ùå Failed to delete post: %v", err)
		return &pb.DeleteResponse{
			Success: false,
			Message: "failed to delete post: " + err.Error(),
		}, status.Error(codes.Internal, "failed to delete post")
	}

	log.Printf("‚úÖ Post %s deleted successfully by user %s (author=%v, admin=%v)",
		req.PostId, req.UserId, isAuthor, isAdmin)

	return &pb.DeleteResponse{
		Success: true,
		Message: "post deleted successfully",
	}, nil
}

func (s *Server) AddComment(ctx context.Context, req *pb.AddCommentRequest) (*pb.CommentResponse, error) {
	if req.PostId == "" || req.TgId == "" || req.Content == "" {
		return nil, status.Error(codes.InvalidArgument, "post_id, user_id and content are required")
	}

	user, err := s.database.GetUserByTgID(req.TgId)
	if err != nil {
		return nil, status.Error(codes.NotFound, "user not found")
	}

	comment := &database.CommentDB{
		ID:        uuid.New().String(),
		PostID:    req.PostId,
		UserID:    user.ID,
		Content:   req.Content,
		CreatedAt: time.Now().Format(time.DateTime),
	}

	if err := s.database.AddComment(comment); err != nil {
		log.Printf("Database error: %v", err)
		return nil, status.Error(codes.Internal, "failed to add comment")
	}

	return &pb.CommentResponse{
		CommentId:      comment.ID,
		PostId:         comment.PostID,
		AuthorTgId:     user.TgID,
		AuthorName:     user.Name,
		AuthorUsername: user.Username,
		Content:        comment.Content,
		CreatedAt:      comment.CreatedAt,
	}, nil
}

func (s *Server) Subscribe(ctx context.Context, req *pb.SubscribeRequest) (*pb.SubscribeResponse, error) {
	if req.FollowerId == "" || req.FollowingId == "" {
		return nil, status.Error(codes.InvalidArgument, "follower_id and following_id are required")
	}

	//if req.FollowerId == req.FollowingId {
	//	return &pb.SubscribeResponse{
	//		Success: false,
	//		Message: "cannot subscribe to yourself",
	//	}, nil
	//}

	err := s.database.Subscribe(req.FollowerId, req.FollowingId)
	if err != nil {
		if strings.Contains(err.Error(), "duplicate key") {
			return &pb.SubscribeResponse{
				Success: false,
				Message: "already subscribed",
			}, nil
		}
		return nil, status.Error(codes.Internal, "failed to subscribe")
	}

	return &pb.SubscribeResponse{
		Success: true,
		Message: "subscribed successfully",
	}, nil
}

func (s *Server) Unsubscribe(ctx context.Context, req *pb.UnsubscribeRequest) (*pb.SubscribeResponse, error) {
	log.Printf("üìå SERVER Unsubscribe called: follower_id=%s, following_id=%s", req.FollowerId, req.FollowingId)

	if req.FollowerId == "" || req.FollowingId == "" {
		return &pb.SubscribeResponse{
			Success: false,
			Message: "follower_id and following_id are required",
		}, status.Error(codes.InvalidArgument, "follower_id and following_id are required")
	}

	err := s.database.Unsubscribe(req.FollowerId, req.FollowingId)
	if err != nil {
		log.Printf("‚ùå Database error: %v", err)
		if strings.Contains(err.Error(), "not found") {
			return &pb.SubscribeResponse{
				Success: false,
				Message: "subscription not found",
			}, nil
		}
		return nil, status.Error(codes.Internal, "failed to unsubscribe")
	}

	log.Printf("‚úÖ Unsubscribe successful")
	return &pb.SubscribeResponse{
		Success: true,
		Message: "unsubscribed successfully",
	}, nil
}

func (s *Server) GetFeed(ctx context.Context, req *pb.GetFeedRequest) (*pb.PostsResponse, error) {
	if req.UserId == "" {
		return nil, status.Error(codes.InvalidArgument, "user_id is required")
	}

	page := req.GetPage()
	if page < 1 {
		page = 1
	}
	pageSize := req.GetPageSize()
	if pageSize < 1 || pageSize > 50 {
		pageSize = 10
	}

	offset := (page - 1) * pageSize

	posts, err := s.database.GetFeed(req.UserId, int(pageSize), int(offset))
	if err != nil {
		return nil, status.Error(codes.Internal, "failed to get feed")
	}

	var pbPosts []*pb.PostResponse
	for _, post := range posts {
		author, err := s.database.GetUserByID(post.AuthorID)
		if err != nil {
			log.Printf("Warning: author not found for post %s: %v", post.ID, err)
			continue
		}
		pbPosts = append(pbPosts, &pb.PostResponse{
			PostId:         post.ID,
			AuthorTgId:     author.TgID,
			AuthorName:     author.Name,
			AuthorUsername: author.Username,
			Content:        post.Content,
			MediaUrl:       post.MediaURL,
			CreatedAt:      post.CreatedAt,
			UpdatedAt:      post.UpdatedAt,
		})
	}

	return &pb.PostsResponse{
		Posts: pbPosts,
	}, nil
}

func (s *Server) IsAdmin(ctx context.Context, req *pb.IsAdminRequest) (*pb.IsAdminResponse, error) {
	isAdmin, err := s.database.IsAdmin(req.TgID)
	if err != nil {
		return nil, status.Error(codes.Internal, "database error")
	}
	return &pb.IsAdminResponse{IsAdmin: isAdmin}, nil
}

func (s *Server) ListUsers(ctx context.Context, req *pb.ListUsersRequest) (*pb.ListUserResponse, error) {
	md, ok := metadata.FromIncomingContext(ctx)
	if !ok {
		return nil, status.Error(codes.Unauthenticated, "no metadata")
	}

	tgIDs := md.Get("tg_id")
	if len(tgIDs) == 0 {
		return nil, status.Error(codes.Unauthenticated, "tg_id not provided")
	}

	tgID := tgIDs[0]

	isAdmin, err := s.database.IsAdmin(tgID)
	if err != nil || !isAdmin {
		return nil, status.Error(codes.PermissionDenied, "admin access required")
	}
	page := req.GetPage()
	if page < 1 {
		page = 1
	}
	pageSize := req.GetPageSize()
	if pageSize < 1 || pageSize > 100 {
		pageSize = 10
	}

	offset := (page - 1) * pageSize
	log.Printf("üìä ListUsers called: page=%d, pageSize=%d, offset=%d", page, pageSize, offset)

	users, err := s.database.GetAllUsers(int(pageSize), int(offset))
	if err != nil {
		return nil, status.Error(codes.Internal, "failed to get users")
	}

	log.Printf("üìä Got %d users from DB", len(users))

	var pbUsers []*pb.UserResponse
	for _, user := range users {
		pbUsers = append(pbUsers, &pb.UserResponse{
			UserId:    user.ID,
			Name:      user.Name,
			Username:  user.Username,
			Age:       user.Age,
			CreatedAt: user.CreatedAt,
		})
	}
	return &pb.ListUserResponse{
		User:       pbUsers,
		TotalCount: int32(len(pbUsers)), // –í —Ä–µ–∞–ª—å–Ω–æ—Å—Ç–∏ –Ω—É–∂–Ω–æ –æ–±—â–µ–µ –∫–æ–ª–∏—á–µ—Å—Ç–≤–æ
	}, nil
}

func (s *Server) AddAdmin(ctx context.Context, req *pb.AddAdminRequest) (*pb.AddAdminResponse, error) {
	if req.TgID == "" {
		return &pb.AddAdminResponse{
			Ok:      false,
			Message: "tg_id is empty",
		}, status.Error(codes.InvalidArgument, "tg_id is empty")
	}
	if req.AddedBy != "" {
		isAdmin, err := s.database.IsAdmin(req.AddedBy)
		if err != nil {
			return nil, status.Error(codes.Internal, "failed to check admin rights")
		}
		if !isAdmin && req.AddedBy != "system" {
			return &pb.AddAdminResponse{
				Ok:      false,
				Message: "only admins can add new admins",
			}, status.Error(codes.PermissionDenied, "only admins can add new admins")
		}
	}

	isAdmin, err := s.database.IsAdmin(req.TgID)
	if err != nil {
		return nil, status.Error(codes.Internal, "failed to check admin rights")
	}
	if isAdmin {
		return &pb.AddAdminResponse{
			Ok:      false,
			Message: "user is already an admin",
		}, nil
	}

	err = s.database.AddAdmin(req.TgID, req.AddedBy)
	if err != nil {
		return &pb.AddAdminResponse{
			Ok:      false,
			Message: "failed to add admin: " + err.Error(),
		}, status.Error(codes.Internal, "failed to add admin")
	}

	return &pb.AddAdminResponse{
		Ok:      true,
		Message: "admin added successfully",
	}, nil
}

func (s *Server) RemoveAdmin(ctx context.Context, req *pb.RemoveAdminRequest) (*pb.RemoveAdminResponse, error) {
	if req.TgID == "" {
		return &pb.RemoveAdminResponse{
			Ok:      false,
			Message: "telegram_id is required",
		}, status.Error(codes.InvalidArgument, "telegram_id is required")
	}

	// TODO –ó–¥–µ—Å—å —Ç–æ–∂–µ –Ω—É–∂–Ω–æ –ø—Ä–æ–≤–µ—Ä–∏—Ç—å –ø—Ä–∞–≤–∞ –≤—ã–∑—ã–≤–∞—é—â–µ–≥–æ
	// –î–ª—è –ø—Ä–æ—Å—Ç–æ—Ç—ã –±—É–¥–µ–º —Å—á–∏—Ç–∞—Ç—å, —á—Ç–æ –ø—Ä–æ–≤–µ—Ä–∫–∞ –ø—Ä–æ–∏—Å—Ö–æ–¥–∏—Ç –Ω–∞ —É—Ä–æ–≤–Ω–µ –±–æ—Ç–∞

	// –£–¥–∞–ª—è–µ–º –∞–¥–º–∏–Ω–∞ (–Ω—É–∂–Ω–æ –¥–æ–±–∞–≤–∏—Ç—å –º–µ—Ç–æ–¥ –≤ db.go)
	err := s.database.RemoveAdmin(req.TgID)
	if err != nil {
		return &pb.RemoveAdminResponse{
			Ok:      false,
			Message: "failed to remove admin: " + err.Error(),
		}, status.Error(codes.Internal, "database error")
	}

	return &pb.RemoveAdminResponse{
		Ok:      true,
		Message: "admin removed successfully",
	}, nil
}

func main() {
	log.Println("üöÄ Server starting...")
	dbConn, err := database.NewDatabase("postgres://postgres:pass@localhost:5432/postgres?sslmode=disable")
	if err != nil {
		log.Fatal(err)
	}
	defer dbConn.Close() //  Wrap ??
	lis, err := net.Listen("tcp", ":50051")
	if err != nil {
		log.Fatalf("failed to listen: %v", err)
	}
	s := grpc.NewServer()
	pb.RegisterUserServiceServer(s, &Server{database: dbConn})
	log.Println("server listening on localhost:50051")
	if err := s.Serve(lis); err != nil {
		log.Fatalf("failed to serve: %v", err)
	}
}
